base/codius_web_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codius-web
spec:
  template:
    spec:
      containers:
      - name: codius-web
        image: codius/codius-web:pr-15-merge
        imagePullPolicy: Always
