base/receipt_verifier_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-verifier
spec:
  template:
    spec:
      containers:
      - name: receipt-verifier
        # image: coilhq/receipt-verifier:pr-12-merge
        imagePullPolicy: Always
      - name: redis
        image: redis
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
